Examples/AScode/Js/Variables/Variables67181.js
const MY_ARRAY = [];
// Cannot assign to new array 
MY_ARRAY = ["B"];
// TypeError: Attempted to assign to readonly property.

